--- a/C_pp/School_ex/.vscode/settings.json
+++ b/C_pp/School_ex/.vscode/settings.json
@@ -2,6 +2,9 @@
     "files.associations": {
         "iostream": "cpp",
         "climits": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "iosfwd": "cpp",
+        "*.tcc": "cpp",
+        "iomanip": "cpp"
     }
 }
